--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,18 @@ jobs:
           node-version: "18"
           cache: "yarn"
 
-      - name: 📦 Install dependencies
+      - name: 📦 Install dependencies using Yarn
         run: yarn install
 
       - name: 🛠️ Build for production
-        run: yarn run predeploy
+        run: yarn predeploy
+
+      - name: 🧑‍💻 Set Git identity for GitHub Pages
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
 
       - name: 🚀 Deploy to GitHub Pages
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: yarn run deploy
+        run: yarn deploy
